Replace foreign key text inputs in media with dropdowns

--- a/app/views/media/edit.html.erb
+++ b/app/views/media/edit.html.erb
@@ -24,7 +24,7 @@
           Comic
         </label>
 
-        <input type="text" id="comic_id" name="comic_id" placeholder="Comic" class="form-control" value="<%= @medium.comic_id %>">
+        <%= select_tag(:comic_id, options_from_collection_for_select(Comic.all, :id, :name, @medium.comic_id), :class => "form-control") %>
       </div>
 
       <!-- Label and input for name -->
