Replace raw foreign key value in media with primary descriptors

--- a/app/views/media/index.html.erb
+++ b/app/views/media/index.html.erb
@@ -19,7 +19,7 @@
 
       <% @media.each do |medium| %>
       <tr>
-        <td><%= medium.comic_id %></td>
+        <td><%= medium.comic.name %></td>
         <td><%= medium.name %></td>
         <td><%= medium.url %></td>
         <td><%= medium.description %></td>
